# knockknock

./: .gitignore  LICENSE.txt  README.md  config.ini.example  pyproject.toml
etc/: advanced_settings.json  config.ini  settings.json
src/knockknock/: app.py  auth.py  config.py  hibp.py  ldap.py
src/knockknock/templates/: choose_login.html.j2  error.html.j2  reset.html.j2  success.html.j2
